cmake_minimum_required(VERSION 3.1)
project (practice) 
set (VERSION_MAJOR 1)
set (VERSION_MINOR 0)
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_EXTENSIONS OFF)
include_directories("${PROJECT_BINARY_DIR}")
set(EXECUTABLE "Practice")
add_executable(${EXECUTABLE} main.cpp)
target_link_libraries (${EXECUTABLE} ${EXTRA_LIBS})